[310356] Optimize Updates to a Transient Connection Profile; added Info status platform logging when a JDBC database profile's driver definition is not found or available

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -74,6 +74,7 @@ ManagedConnection_offline_not_supported_error = {0} does not support working off
 drivers.error.finding.property.no.template = Problem attempting to retrieve {0} from driver template.
 
 JDBCConnection.technologyName = JDBC
+JDBCConnection.invalidDriverDefinition = {0}\: {1}. Using the driver properties defined in database profile instead.
 
 error.database.not.start = No start database command was issued. ErrorCode = {0}, SQLState = {1}.
 
