[310517] Modified plugin.xml in plugin o.e.d.connectivity.ui.dse to add "group.properties" insertion point to DSE popup menu.

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -280,6 +280,9 @@
             <insertionPoint
                  name="additions"
                  separator="true"/>
+            <insertionPoint
+                 name="group.properties"
+                 separator="true"/>
      	</popupMenu>
       </viewer>
       <viewerContentBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
