[310877] Added support for SQL CALL statements to SQL Query parser and model; modified plugins o.e.d.modelbase.sql.query, o.e.d.modelbase.sql.xml.query, o.e.d.sqltools.parsers.sql, o.e.d.sqltools.parsers.sql.query

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/src/org/eclipse/datatools/sqltools/parsers/sql/query/sqlqueryparsermessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/src/org/eclipse/datatools/sqltools/parsers/sql/query/sqlqueryparsermessages.properties
@@ -23,8 +23,8 @@ TableReferenceResolver.AMBIGUOUS_COLUMN			= Column name "{0}" is ambiguous.
 TableReferenceResolver.AMBIGUOUS_TABLE			= Table name "{0}" is ambiguous.
 TableReferenceResolver.AMBIGUOUS_TABLE_ALIAS	= Table alias "{0}" is ambiguous.
 
-
-
+RoutineReferenceResolver.UNRESOLVED_PROC        = Unable to find procedure.
+RoutineReferenceResolver.INCORRECT_PARM_COUNT	= Incorrect number of parameters.
 
 #
 # following messages to translate names of syntax rules that were violated and caused parser error
