[312360] Modified PluginResources.properties in plugin o.e.d.sqltools.result.ui to fix preference label to make clear what the units of the value are.

--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -327,7 +327,8 @@ Parameter_constructor_error=Error occurs when constructing Parameter instance: i
 
 ParameterViewerPage_group = Viewer for parameter values 
 ParameterViewerPage_select_viewer = Select &param viewer:
-ParameterViewer_ellipsisEnabledValue = Display ellipis when the value length exceeds
+### In the UI the text of the next entry is followed by an entry field containing an integer value.
+ParameterViewer_ellipsisEnabledValue = Display ellipsis when the value character length exceeds
 ParameterViewerPreferencePage_parameterResultOptions_LessthanOne = Can't be less than one
 ParameterViewerPreferencePage_parameterResultOptions_maxParmeterCount_tooltip = If the parameter value is greater than the specified length, then enable an ellipsis [...] button to view the value in a separate window
 ParameterViewerPage_viewer_tooltip = Select viewer for displaying results
