[311401] Modified mnemonics for new connection wizard in plugins o.e.d.connectivity.ui and o.e.d.connectivity.apache.derby.ui

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -159,7 +159,7 @@ ExtensibleProfileDetailsWizardPage.description = Select a driver from the drop-d
 ExtensibleProfileDetailsWizardPage.driverCombo.label = &Drivers:
 ExtensibleNewConnectionProfileWizard.title = New Connection Profile
 
-DriverUIContributorComposite.group = &Properties
+DriverUIContributorComposite.group = Properties
 
 CommonDriverUIContributor.optionaltab = &Optional
 CommonDriverUIContributor.optionalProps.label = Additional properties:
