[310004] Modified plugin.xml in plugin o.e.d.sqltools.sqleditor to specify $nl$ variable for templates location

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
@@ -233,7 +233,7 @@
       </contextType>
       <include
       		file="templates/default-templates.xml"
-      		translations="templates/default-templates.properties">
+      		translations="$nl$/templates/default-templates.properties">
       </include>
    </extension>
     
