[313961] Add schema folder to build.properties file in o.e.d.sqltools plugins that need it

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                plugin.properties,\
                .,\
                about.html,\
-               icons/
+               icons/,\
+               schema/
 
 src.dir =		src/
 plugin.version =	1.0.0.200711151
