--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
@@ -6,7 +6,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                images/,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               schema/
 
 src.dir =		src/
 plugin.version =	1.0.0.200802191
