--- a/plugins/org.eclipse.datatools.sqltools.data.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.data.ui/build.properties
@@ -5,7 +5,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                icons/,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               schema/
 src.dir = src/
 plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
