--- a/plugins/org.eclipse.datatools.sqltools.tabledataeditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.tabledataeditor/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               schema/
 src.dir = src/
 plugin.version =	1.0.0.200706071
 javadoc.dir =		doc/api/
