--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -65,34 +65,34 @@ ResultView_filter_info=Displayed {0} of {1} results: {2} succeeded, {3} failed, 
 ##########################################################
 # Status
 ##########################################################
-OperationCommand_status_critical=Critical Error
-OperationCommand_status_warning=Warning
-OperationCommand_status_started=Started
-OperationCommand_status_running=Running
-OperationCommand_status_succeeded=Succeeded
-OperationCommand_status_failed=Failed
-OperationCommand_status_terminated=Terminated
-OperationCommand_status_unknown=Unknown
+#OperationCommand_status_critical=Critical Error
+#OperationCommand_status_warning=Warning
+#OperationCommand_status_started=Started
+#OperationCommand_status_running=Running
+#OperationCommand_status_succeeded=Succeeded
+#OperationCommand_status_failed=Failed
+#OperationCommand_status_terminated=Terminated
+#OperationCommand_status_unknown=Unknown
 
 ##########################################################
 # Action type
 ##########################################################
-OperationCommand_unknown_action=Unknown
-OperationCommand_action_execute=Execute
-OperationCommand_action_create=Create
-OperationCommand_action_debug=Debug
-OperationCommand_action_deploy=Deploy
-OperationCommand_action_drop=Drop
-OperationCommand_action_edit=Edit
-OperationCommand_action_export=Export
-OperationCommand_action_extract=Extract
-OperationCommand_action_import=Import
-OperationCommand_action_load=Load
-OperationCommand_action_before_run=Before-run execution
-OperationCommand_action_after_run=After-run execution
-OperationCommand_action_run=Run
-OperationCommand_action_validate=Validate
-OperationCommand_action_browse=Browse
+#OperationCommand_unknown_action=Unknown
+#OperationCommand_action_execute=Execute
+#OperationCommand_action_create=Create
+#OperationCommand_action_debug=Debug
+#OperationCommand_action_deploy=Deploy
+#OperationCommand_action_drop=Drop
+#OperationCommand_action_edit=Edit
+#OperationCommand_action_export=Export
+#OperationCommand_action_extract=Extract
+#OperationCommand_action_import=Import
+#OperationCommand_action_load=Load
+#OperationCommand_action_before_run=Before-run execution
+#OperationCommand_action_after_run=After-run execution
+#OperationCommand_action_run=Run
+#OperationCommand_action_validate=Validate
+#OperationCommand_action_browse=Browse
 
 ##########################################################
 # Actions
@@ -118,13 +118,13 @@ CommonTextViewer_action_selectall=Select All
 ##########################################################
 # StatusTextProvider
 ##########################################################
-StatusTextProvider_operation_success =Operation succeeded
-StatusTextProvider_action_type=Action type:\t
-StatusTextProvider_profile_name=Profile name:\t
-StatusTextProvider_database=Database:\t
-StatusTextProvider_time=Execute time:\t
-StatusTextProvider_update_count_complex =({0} rows affected)
-StatusTextProvider_update_count_single =({0} row affected)
+#StatusTextProvider_operation_success =Operation succeeded
+#StatusTextProvider_action_type=Action type:\t
+#StatusTextProvider_profile_name=Profile name:\t
+#StatusTextProvider_database=Database:\t
+#StatusTextProvider_time=Execute time:\t
+#StatusTextProvider_update_count_complex =({0} rows affected)
+#StatusTextProvider_update_count_single =({0} row affected)
 
 ##########################################################
 #  IResultConstants resource Message
@@ -323,7 +323,7 @@ ResultHistoryPage_tooltip_auto_clean=Clean up result history when Eclipse shuts 
 ##########################################################
 # Others
 ##########################################################
-Parameter_constructor_error=Error occurs when constructing Parameter instance: invalid parameters
+#Parameter_constructor_error=Error occurs when constructing Parameter instance: invalid parameters
 
 ParameterViewerPage_group = Viewer for parameter values 
 ParameterViewerPage_select_viewer = Select &param viewer:
@@ -354,7 +354,7 @@ ContainerSelectionGroup_folder_select=Select the folder:
 ResultHistoryLuceneIndex_io_error=Unexpected RAM I/O exception occurs
 ResultHistoryLuceneIndex_parser_error=Unexpected parsing exception occurs
 
-StatusLogger_no_bundle=No resource bundle has been set for the Logger
+#StatusLogger_no_bundle=No resource bundle has been set for the Logger
 StatusLogger_possible_args=\ possible args: {0}, {1}, {2}, {3}
 StatusLogger_no_bundle_1=No resource is associated with key "
 StatusLogger_possible_args_1=\ possible args: {0}, {1}, {2}, {3}
