--- a/plugins/org.eclipse.datatools.enablement.ingres.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ingres.ui/plugin.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2006-2007 Ingres Corporation and others.
+## Copyright (c) 2006-2007, 2010 Ingres Corporation and others.
 ## All rights reserved.   This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
 ##
 ## Contributors: 
 ##  Ingres - Implementation
+##  Ingres - update for bugzilla 317378
 ################################################################################
 
 PLUGIN_NAME = Ingres DTP UI Plug-in
@@ -19,4 +20,5 @@ WIZARD_DESCRIPTION =
 # Property page
 PROPERTY_PAGE_NAME = Ingres Connection Properties
 
-SynonymDecorationServiceLabel = Data Tools - Ingres Synonym 
+SynonymDecorationServiceLabel = Data Tools - Ingres Synonym
+datatools.core.ui.modelexplorer.modelExplorerColumnDecoration = Data Tools - Ingres Column Data Type 
