[132958] Support for multiple EPackages (BZ 132958#c24)

--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.properties
@@ -10,6 +10,8 @@ oda.data.source.id=org.eclipse.datatools.enablement.oda.ecore
 # NLS strings
 #
 plugin.name=Ecore ODA Data Source Designer
+providerName=Eclipse Data Tools Platform
+#
 newwizard.name=Ecore ODA Data Source
 newwizard.description=Create an Ecore ODA Data Source connection profile
 wizard.window.title=New Ecore ODA Data Source Profile
