[331057] -  Packaged Javadocs out of date

--- a/plugins/org.eclipse.datatools.doc.isv/build.properties
+++ b/plugins/org.eclipse.datatools.doc.isv/build.properties
@@ -2,7 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
+               about.html,\
                plugin.xml,\
                tocreference.xml,\
                toc.xml,\
-               html/
+               dtp_help_helper_doc.xml,\
+               html/,\
+               projects/
+customBuildCallbacks=customBuildCallbacks.xml
