--- a/plugins/org.eclipse.datatools.doc.isv/build.properties
+++ b/plugins/org.eclipse.datatools.doc.isv/build.properties
@@ -6,4 +6,64 @@ bin.includes = META-INF/,\
                dtp_help_helper_doc.xml,\
                html/,\
                projects/
-customBuildCallbacks=customBuildCallbacks.xml
+               
+customBuildCallbacks = customBuildCallbacks.xml
+
+include.package.names = org.eclipse.datatools.connectivity.*, \
+                        org.eclipse.datatools.enablement.*,\
+                        org.eclipse.datatools.modelbase*,\
+                        org.eclipse.datatools.sqltools.data.*,\
+                        org.eclipse.datatools.sqltools.db.*,\
+                        org.eclipse.datatools.sqltools.debugger.*,\
+                        org.eclipse.datatools.sqltools.editor.*,\
+                        org.eclipse.datatools.sqltools.result*,\
+                        org.eclipse.datatools.sqltools.routineeditor.*,\
+                        org.eclipse.datatools.sqltools.schemaobjecteditor*,\
+                        org.eclipse.datatools.sqltools.schemaobjecteditor.ui.internal.ui,\
+                        org.eclipse.datatools.sqltools.sqleditor*,\
+                        org.eclipse.datatools.sqltools.tabledataeditor*,\
+						org.eclipse.datatools.sqltools.parsers*,\
+                        org.eclipse.datatools.sqltools.sqlbuilder*,\
+                        org.eclipse.datatools.sqltools.sqlscrapbook*,\
+                        org.eclipse.datatools.sqltools.sql*,\
+                        org.eclipse.datatools.sqltools.plan*,\
+                        org.eclipse.datatools.sqltools.common.ui*,\
+                        org.eclipse.datatools.sqltools.ddlgen.ui*
+
+exclude.package.names = org.eclipse.datatools.connectivity.*.internal.*, \
+                        org.eclipse.datatools.enablement.*.internal.*,\
+                        org.eclipse.datatools.enablement.oda.*,\
+                        org.eclipse.datatools.connectivity.oda.*.impl.*,\
+                        org.eclipse.datatools.connectivity.oda.*.nls.*,\
+                        org.eclipse.datatools.connectivity.oda.consumer.helper,\
+                        org.eclipse.datatools.connectivity.oda.profile.provider,\
+                        org.eclipse.datatools.connectivity.oda.template.ui,\
+                        org.eclipse.datatools.connectivity.oda.flatfile*,\
+                        org.eclipse.datatools.modelbase.*.impl*,\
+                        org.eclipse.datatools.sqltools.db.generic*,\
+                        org.eclipse.datatools.sqltools.db.*.internal.*,\
+                        org.eclipse.datatools.sqltools.debugger.ui.*.internal*,\
+                        org.eclipse.datatools.sqltools.editor.core.ui.*.internal.*,\
+                        org.eclipse.datatools.sqltools.result.ui.*.internal.*,\
+                        org.eclipse.datatools.sqltools.routineeditor.*.internal.*,\
+                        org.eclipse.datatools.sqltools.schemaobjecteditor.ui.pages.*.internal*,\
+                        org.eclipse.datatools.sqltools.schemaobjecteditor.ui.internal.*,\
+                        org.eclipse.datatools.sqltools.parsers.*.internal*,\
+                        org.eclipse.datatools.sqltools.sqlbuilder.*.internal*,\
+                        org.eclipse.datatools.sqltools.sqlscrapbook.*.internal*,\
+                        org.eclipse.datatools.sqltools.sql.*.internal*,\
+                        org.eclipse.datatools.sqltools.plan.*.internal*,\
+                        org.eclipse.datatools.sqltools.common.ui.*.internal*,\
+                        org.eclipse.datatools.sqltools.ddlgen.ui.*.internal*
+                        
+
+                        
+                        
+
+                        
+                        
+                        
+                        
+                        
+                        
+                    
