Bug 331057 - Packaged Javadocs out of date

--- a/plugins/org.eclipse.datatools.doc.isv/build.properties
+++ b/plugins/org.eclipse.datatools.doc.isv/build.properties
@@ -41,20 +41,20 @@ exclude.package.names = org.eclipse.datatools.connectivity.*.internal.*, \
                         org.eclipse.datatools.connectivity.oda.flatfile*,\
                         org.eclipse.datatools.modelbase.*.impl*,\
                         org.eclipse.datatools.sqltools.db.generic*,\
-                        org.eclipse.datatools.sqltools.db.*.internal.*,\
-                        org.eclipse.datatools.sqltools.debugger.ui.*.internal*,\
-                        org.eclipse.datatools.sqltools.editor.core.ui.*.internal.*,\
-                        org.eclipse.datatools.sqltools.result.ui.*.internal.*,\
-                        org.eclipse.datatools.sqltools.routineeditor.*.internal.*,\
-                        org.eclipse.datatools.sqltools.schemaobjecteditor.ui.pages.*.internal*,\
+                        org.eclipse.datatools.sqltools.db.*internal.*,\
+                        org.eclipse.datatools.sqltools.debugger.ui.*internal*,\
+                        org.eclipse.datatools.sqltools.editor.core.ui.*internal.*,\
+                        org.eclipse.datatools.sqltools.result.ui.*internal.*,\
+                        org.eclipse.datatools.sqltools.routineeditor.*internal.*,\
+                        org.eclipse.datatools.sqltools.schemaobjecteditor.ui.pages.*internal*,\
                         org.eclipse.datatools.sqltools.schemaobjecteditor.ui.internal.*,\
-                        org.eclipse.datatools.sqltools.parsers.*.internal*,\
-                        org.eclipse.datatools.sqltools.sqlbuilder.*.internal*,\
-                        org.eclipse.datatools.sqltools.sqlscrapbook.*.internal*,\
-                        org.eclipse.datatools.sqltools.sql.*.internal*,\
-                        org.eclipse.datatools.sqltools.plan.*.internal*,\
-                        org.eclipse.datatools.sqltools.common.ui.*.internal*,\
-                        org.eclipse.datatools.sqltools.ddlgen.ui.*.internal*
+                        org.eclipse.datatools.sqltools.parsers.*internal*,\
+                        org.eclipse.datatools.sqltools.sqlbuilder.*internal*,\
+                        org.eclipse.datatools.sqltools.sqlscrapbook.*internal*,\
+                        org.eclipse.datatools.sqltools.sql.*internal*,\
+                        org.eclipse.datatools.sqltools.plan.*internal*,\
+                        org.eclipse.datatools.sqltools.common.ui.*internal*,\
+                        org.eclipse.datatools.sqltools.ddlgen.ui.*internal*
                         
 
                         
