Bug 331057 - Packaged Javadocs out of date

--- a/plugins/org.eclipse.datatools.doc.isv/build.properties
+++ b/plugins/org.eclipse.datatools.doc.isv/build.properties
@@ -37,6 +37,8 @@ exclude.package.names = org.eclipse.datatools.connectivity.**.internal.*,\
                         org.eclipse.datatools.connectivity.oda.profile.provider*, \
                         org.eclipse.datatools.connectivity.oda.template.ui*,\
                         org.eclipse.datatools.connectivity.oda.flatfile*,\
+                        org.eclipse.datatools.connectivity.oda.design.ui.profile.db.wizards,\
+                        org.eclipse.datatools.connectivity.oda.profile.*,\
                         org.eclipse.datatools.enablement.**.internal.*, \
                         org.eclipse.datatools.enablement.oda.*, \
                         org.eclipse.datatools.modelbase.**.impl, \
