--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2005, 2010 Sybase, Inc. and others.
+## Copyright (c) 2005, 2011 Sybase, Inc. and others.
 ## All rights reserved. This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -77,5 +77,5 @@ JDBCConnection.technologyName = JDBC
 JDBCConnection.invalidDriverDefinition = {0}\: {1}. Using the driver properties defined in database profile instead.
 
 error.database.not.start = No start database command was issued. ErrorCode = {0}, SQLState = {1}.
-
+PluginResourceLocator.invalidURL = Invalid URL {0} (Error\: {1})
 
