FlatFile Dataset chokes if all lines don't have same comma count. [32325]

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -28,6 +28,7 @@ datasource.property.csvdelimitertype=CSV &Type
 datasource.property.charset=&Character Set
 datasource.property.incltypeline=Use Second Line as &Data Type Indicator
 datasource.property.inclcolumnnameline=Use First Line as Column &Name Indicator
+datasource.property.trailnullcols=Use trail null columns
 
 dataset.property.savedcolumnsinfo=The Information about Each Column
 
