--- a/features/org.eclipse.datatools.enablement.apache.derby.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.apache.derby.feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.3 2009/04/01 09:07:31 xgu Exp $
+#  * $Id: feature.properties,v 1.4 2010/04/27 06:34:52 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
@@ -35,7 +35,7 @@ licenseURL=license.html
 # should be plain text version of license agreement pointed to be "licenseURL"
 license=\
 Eclipse Foundation Software User Agreement\n\
-April 14, 2010\n\
+February 1, 2011\n\
 \n\
 Usage Of Content\n\
 \n\
@@ -104,6 +104,7 @@ THE ABOUTS, FEATURE LICENSES, AND FEATURE UPDATE LICENSES MAY REFER\n\
 TO THE EPL OR OTHER LICENSE AGREEMENTS, NOTICES OR TERMS AND CONDITIONS.\n\
 SOME OF THESE OTHER LICENSE AGREEMENTS MAY INCLUDE (BUT ARE NOT LIMITED TO):\n\
 \n\
+       - Eclipse Distribution License Version 1.0 (available at http://www.eclipse.org/licenses/edl-v1.0.html)\n\
        - Common Public License Version 1.0 (available at http://www.eclipse.org/legal/cpl-v10.html)\n\
        - Apache Software License 1.1 (available at http://www.apache.org/licenses/LICENSE)\n\
        - Apache Software License 2.0 (available at http://www.apache.org/licenses/LICENSE-2.0)\n\
