[349266]Correct the provider name of DTP features/plugins

--- a/features/org.eclipse.datatools.sdk-all.feature/feature.properties
+++ b/features/org.eclipse.datatools.sdk-all.feature/feature.properties
@@ -12,14 +12,14 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.3 2010/04/27 06:36:20 xgu Exp $
+#  * $Id: feature.properties,v 1.4 2011/06/03 02:56:20 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Extender SDK
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
