--- a/features/org.eclipse.birt.dtp.sybase.nl.feature/feature.properties
+++ b/features/org.eclipse.birt.dtp.sybase.nl.feature/feature.properties
@@ -18,7 +18,7 @@
 featureName=Datatools Language Pack Project
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Business Intellegence and Reporting Tool (BIRT) Updates
