--- a/features/org.eclipse.datatools.connectivity.oda.designer.core.feature/feature.properties
+++ b/features/org.eclipse.datatools.connectivity.oda.designer.core.feature/feature.properties
@@ -12,14 +12,14 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2010/04/27 06:35:25 xgu Exp $
+#  * $Id: feature.properties,v 1.3 2011/06/03 02:56:20 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Open Data Access Designer Core
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
