--- a/features/org.eclipse.datatools.enablement.oda.ecore.sdk.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.oda.ecore.sdk.feature/feature.properties
@@ -12,14 +12,14 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2010/04/27 06:36:40 xgu Exp $
+#  * $Id: feature.properties,v 1.3 2011/06/03 02:56:21 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Enablement for ODA Runtime
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
