update email address

--- a/plugins/org.eclipse.datatools.releng.builder/config.properties
+++ b/plugins/org.eclipse.datatools.releng.builder/config.properties
@@ -7,7 +7,7 @@ diskspace.warning.threshold=400
 
 ########################################################################
 
-replyto.address=xgu@actuate.com
+replyto.address=yjiang@actuate.com
 QA.test.dir=\\\\qa-build\\BIRTOutput
 
 mail.port=5025
