--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -78,4 +78,5 @@ JDBCConnection.invalidDriverDefinition = {0}\: {1}. Using the driver properties 
 
 error.database.not.start = No start database command was issued. ErrorCode = {0}, SQLState = {1}.
 PluginResourceLocator.invalidURL = Invalid URL {0} (Error\: {1})
+ConnectivityPlugin.error.noDefaultWorkspace = Unable to determine the default workspace location.  Check your OSGi-less platform configuration of the plugin or datatools workspace path.
 
