Add remote flat file support. [41597]

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -29,6 +29,7 @@ datasource.property.charset=&Character Set
 datasource.property.incltypeline=Use Second Line as &Data Type Indicator
 datasource.property.inclcolumnnameline=Use First Line as Column &Name Indicator
 datasource.property.trailnullcols=Use trail null columns
+datasource.property.uri=File &URI
 
 dataset.property.savedcolumnsinfo=The Information about Each Column
 
