[358686] Provide Extendability in the Encryption of Connection Profile Stores

--- a/plugins/org.eclipse.datatools.connectivity/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.xml
@@ -4,7 +4,8 @@
 
    <extension-point id="connectionProfile" name="%extension-point.name.connectionProfile" schema="schema/connectionProfile.exsd"/>
    <extension-point id="driverExtension" name="%extension-point.name.driverExtension" schema="schema/driverExtension.exsd"/>
-   <extension-point id="ProfileManagerInitializationProvider" name="%extension-point.name.ProfileManagerInitializationProvider" schema="schema/ProfileManagerInitializationProvider.exsd"/> 
+   <extension-point id="ProfileManagerInitializationProvider" name="%extension-point.name.ProfileManagerInitializationProvider" schema="schema/ProfileManagerInitializationProvider.exsd"/>
+   <extension-point id="cipherProvider" name="%extension-point.name.cipherProvider" schema="schema/cipherProvider.exsd"/> 
 
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
