--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -9,6 +9,7 @@
 ##    Sybase, Inc. - initial API and implementation
 ##    IBM Corporation - migrated to new wizard framework
 ##    IBM Corporation - fix for defect 222818
+##    Actuate Corporation - added the cipherProvider extension point [BZ 358686]
 ################################################################################ 
 plugin.internal_error=Internal Error - org.eclipse.datatools.connectivity
 ConnectionProfileConstants.unknownVersion=unknown
@@ -79,4 +80,7 @@ JDBCConnection.invalidDriverDefinition = {0}\: {1}. Using the driver properties 
 error.database.not.start = No start database command was issued. ErrorCode = {0}, SQLState = {1}.
 PluginResourceLocator.invalidURL = Invalid URL {0} (Error\: {1})
 ConnectivityPlugin.error.noDefaultWorkspace = Unable to determine the default workspace location.  Check your OSGi-less platform configuration of the plugin or datatools workspace path.
+CipherProviderExtensions.missingRequiredAttrValue = The {0} element in the {1} extension is missing a value in one or more of its required attributes: {2}={3}, {4}={5}
+CipherProviderExtensions.invalidClassAttrValue = Invalid class ({0}) specified in the {1} extension.  It must implement the {2} Java interface.
+CipherProviderExtensions.conflictingExtensions = The registered ICipherProvider ({0}) has been replaced by the ICipherProvider ({1}) defined by another extension ({2}) for the same file extension ({3}).
 
