[358686] Refined log message and name of cipherProvider ext point

--- a/plugins/org.eclipse.datatools.connectivity/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.properties
@@ -13,7 +13,7 @@
 Plugin.Name = Data Tools Platform Connectivity Plug-in
 Plugin.ProviderName = Eclipse Data Tools Platform
 
-extension-point.name.cipherProvider = Connectivty Profile Store Cipher Provider
+extension-point.name.cipherProvider = Connection Profiles Store Cipher Provider
 extension-point.name.connectionProfile = Connection Profile Extension
 extension-point.name.driverExtension = driverExtension
 extension-point.name.ProfileManagerInitializationProvider =  ProfileManagerInitializationProvider
