--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -82,5 +82,5 @@ PluginResourceLocator.invalidURL = Invalid URL {0} (Error\: {1})
 ConnectivityPlugin.error.noDefaultWorkspace = Unable to determine the default workspace location.  Check your OSGi-less platform configuration of the plugin or datatools workspace path.
 CipherProviderExtensions.missingRequiredAttrValue = The {0} element in the {1} extension is missing a value in one or more of its required attributes: {2}={3}, {4}={5}
 CipherProviderExtensions.invalidClassAttrValue = Invalid class ({0}) specified in the {1} extension.  It must implement the {2} Java interface.
-CipherProviderExtensions.conflictingExtensions = The registered ICipherProvider ({0}) has been replaced by the ICipherProvider ({1}) defined by another extension ({2}) for the same file extension ({3}).
+CipherProviderExtensions.conflictingExtensions = The registered ICipherProvider ({0}) has been replaced by the ICipherProvider ({1}) contributed by another extension in {2} for the same file extension ({3}).
 
