--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -80,7 +80,7 @@ JDBCConnection.invalidDriverDefinition = {0}\: {1}. Using the driver properties 
 error.database.not.start = No start database command was issued. ErrorCode = {0}, SQLState = {1}.
 PluginResourceLocator.invalidURL = Invalid URL {0} (Error\: {1})
 ConnectivityPlugin.error.noDefaultWorkspace = Unable to determine the default workspace location.  Check your OSGi-less platform configuration of the plugin or datatools workspace path.
-CipherProviderExtensions.missingRequiredAttrValue = The {0} element in the {1} extension is missing a value in one or more of its required attributes: {2}={3}, {4}={5}
-CipherProviderExtensions.invalidClassAttrValue = Invalid class ({0}) specified in the {1} extension.  It must implement the {2} Java interface.
+CipherProviderExtensions.missingRequiredAttrValue = The {0} element in the {1} extension contributed by {2} is missing a value in one or more of its required attributes: {3}={4}, {5}={6}
+CipherProviderExtensions.invalidClassAttrValue = Invalid class type ({0}) in the {1} extension contributed by {2}.  It must implement the {3} Java interface.
 CipherProviderExtensions.conflictingExtensions = The registered ICipherProvider ({0}) has been replaced by the ICipherProvider ({1}) contributed by another extension in {2} for the same file extension ({3}).
 
