--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                .,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               schema/
 javac.source =           1.5
 javac.target =           1.5
 javadoc.dir =            doc/api/
