--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 Actuate Corporation.
+# Copyright (c) 2005, 2011 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -14,3 +14,4 @@
 #
 plugin.name=DTP ODA Connection Profile Framework Plug-in
 
+extension-point.name.profileStore = ODA Connection Profiles Store
