--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
@@ -3,7 +3,7 @@
 <!--
 /**
  *************************************************************************
- * Copyright (c) 2005, 2007 Actuate Corporation.
+ * Copyright (c) 2005, 2011 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -19,6 +19,8 @@
 -->
 
 <plugin>
+   <extension-point id="profileStore" name="%extension-point.name.profileStore" schema="schema/profileStore.exsd"/>
+
    <extension
          point="org.eclipse.datatools.connectivity.oda.consumer.propertyProvider">
       <dataSourcePropertyService
