Checked in changes for bug 357576
This change enables a connection polling feature in DTP.  Note: this
provides the foundation (extension points, interfaces) for connection
polling, but does not provide the complete implementation.

--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
@@ -5,7 +5,8 @@
    <extension-point id="driverUIContributor" name="Driver UI Contributor" schema="schema/driverUIContributor.exsd"/>
    <extension-point id="connectionProfileImage" name="Connection Profile Image" schema="schema/connectionProfileImage.exsd"/>
    <extension-point id="addConnectListener" name="%extension-point.name.addConnectListener" schema="schema/addConnectListener.exsd"/>   
-   
+   <extension-point id="connectionExceptionHandler" name="Connection Exception Handler" schema="schema/connectionExceptionHandler.exsd"/>
+    
    <extension point="org.eclipse.ui.preferencePages">
    	<page name="%datatools.preference.page.name" class="org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"
    	id = "org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"
