--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -12,6 +12,7 @@
    <extension-point id="metaDataExtension" name="metaDataExtension" schema="schema/metaDataExtension.exsd"/>
    <extension-point id="mappings" name="Mappings" schema="schema/mappings.exsd"/>
    <extension-point id="sqlexceptionHandler" name="sqlexceptionHandler" schema="schema/sqlexceptionHandler.exsd"/>
+   <extension-point id="validConnectionHandler" name="%validConnectionHandlerName" schema="schema/validConnectionHandler.exsd"/>
    
 
    <extension
