CheckIn: Fix an issue Description for dialog New Flat File Data Source Profile need updating.[43610]

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -20,7 +20,7 @@ plugin.name=Eclipse Data Tools Platform Flat File ODA Designer
 newwizard.name=Flat File Data Source
 newwizard.description=Create an ODA Flat File connection profile
 wizard.window.title=New Flat File Data Source Profile
-wizard.data.source.page.title=Select Folder
+wizard.data.source.page.title=Define Folder or a File URI
 profile.propertypage.name=Flat File Data Source Connection Properties
 wizard.data.set.page.title=Select Columns
 wizard.data.set.title=Select Table
